--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"@trpc/next": "10.0.0-proxy-beta.17",
 		"@trpc/react": "10.0.0-proxy-beta.17",
 		"@trpc/server": "10.0.0-proxy-beta.17",
+		"axios": "^1.1.3",
 		"next": "12.3.1",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
