--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
 		"build-storybook": "build-storybook"
 	},
 	"dependencies": {
+		"@emotion/react": "^11.10.4",
+		"@emotion/styled": "^11.10.4",
+		"@mui/icons-material": "^5.10.9",
+		"@mui/material": "^5.10.11",
 		"@tanstack/react-query": "^4.10.0",
 		"@trpc/client": "10.0.0-proxy-beta.17",
 		"@trpc/next": "10.0.0-proxy-beta.17",
@@ -48,6 +52,7 @@
 		"postcss": "^8.4.14",
 		"prettier": "^2.7.1",
 		"prettier-plugin-tailwindcss": "^0.1.13",
+		"storybook-addon-next-router": "^4.0.1",
 		"tailwindcss": "^3.1.6",
 		"typescript": "^4.8.4"
 	},
