fix linter issues

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,5 +4,8 @@
 		"project": "./tsconfig.json"
 	},
 	"plugins": ["@typescript-eslint"],
-	"extends": ["next/core-web-vitals", "plugin:@typescript-eslint/recommended", "plugin:storybook/recommended"]
+	"extends": ["next/core-web-vitals", "plugin:@typescript-eslint/recommended", "plugin:storybook/recommended"],
+	"rules": {
+		"@typescript-eslint/no-empty-interface": "off"
+	}
 }
